Fixed button text clipping weird

--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -13,7 +13,7 @@
   padding: 4px;
   position: relative;
   text-decoration: none;
-  width: 200px;
+  min-width: 200px;
 }
 
 .button1span {
